fixed Hrnet for newer versions with custum dataset

--- a/NLA-SLR/configs/nla_slr_wlasl_2000.yaml
+++ b/NLA-SLR/configs/nla_slr_wlasl_2000.yaml
@@ -2,21 +2,20 @@ task: ISLR
 data:
   input_data: videos #features, gloss
   input_streams:
-    - keypoint
-    - keypoint
     - rgb
     - rgb
-  keypoint_file: ../../data/wlasl_2000/keypoints_hrnet_dark_coco_wholebody.pkl
+  keypoint_file: ../../generated/keypoints_hrnet_dark_coco_wholebody.pkl
   use_keypoints:
     - pose
     - mouth_half
     - hand
   zip_file: ../../data/wlasl_2000/WLASL2000.zip
   word_emb_file: ../../data/wlasl_2000/wlasl_word_embeddings.pkl
-  train: ../../data/wlasl_2000/train.pkl
+  train: ../../generated/train.pkl
+  #train: ../../data/wlasl_2000/train.pkl
   dev: ../../data/wlasl_2000/dev.pkl
   test: ../../data/wlasl_2000/test.pkl
-  dataset_name: WLASL_2000
+  dataset_name: wlasl
   level: word #word or char
   txt_lowercase: true
   num_output_frames: 64
@@ -46,7 +45,7 @@ testing:
       beam_size: 1
 training:
   overwrite: true
-  model_dir: results/nla_slr_wlasl_2000
+  model_dir: /ssd_scratch/cvit/aparna/results/nla_slr_wlasl_2000
   random_seed: 321
   shuffle: True
   num_workers: 8
